test/bad/generators/nested01.px

func f(): Int... def
    func g(): Int def
        yield 42
    g()

f()
